Adicionando casos de testes de integração para tratar fluxo onde usuário não possui as authorities de permissão para requisição